--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {box-sizing: border-box;}
+ html, body {
+ }
+
 .header-container {
 	color: #2789e5;
 	margin: 0 auto;
@@ -14,6 +18,8 @@
 	width: 80%;
 	font-family: serif;
   font-size: 90%;
+  position: relative;
+  font-size: 1em;
 }
 
 .body-title {
@@ -46,10 +52,9 @@ li {
 }
 .footer-container {
 	margin: 0 auto;
-	text-align: center;
-	width: 80%;
-	height: 40%;
-	padding: 15px;
+	text-align: right;
+	width: 90%;
+	height: 10%;
 }
 
 .btn {
@@ -80,3 +85,22 @@ li {
   text-decoration: none;
   cursor: pointer;
 }
+
+@media (min-width: 280px) {
+  .body-container {
+    font-size: 2em;
+  }
+}
+
+@media (min-width: 280px) {
+  .header-container {
+    font-size: 2em;
+  }
+}
+
+@media (min-width: 280px) {
+  .footer-container {
+    font-size: 2em;
+  }
+}
+
