--- a/style.css
+++ b/style.css
@@ -1,27 +1,42 @@
 * {box-sizing: border-box;}
  html, body {
+  height: 100%;
+  width: 100%;
  }
 
 .header-container {
 	color: #2789e5;
 	margin: 0 auto;
 	text-align: justify;
-	height: 50%;
-	width: 80%;
+	height: 15%;
+	width: 85%;
 	padding: 15px;
 }
 
 .body-container {
 	margin: auto;
 	text-align: left;
-	height: 40%;
-	width: 80%;
+	height: 60%;
+	width: 85%;
 	font-family: serif;
-  font-size: 90%;
-  position: relative;
-  font-size: 1em;
+  font-size: 13px;
+  /*overflow: auto;*/
+  padding-bottom: 35px;
 }
 
+.footer-container {
+  margin: 0 auto;
+  text-align: right;
+  width: 85%;
+  height: 10%;
+  padding-bottom: 5%
+  border: dotted;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin-top: -35px;
+}
 .body-title {
 	font-family: 'Reenie Beanie', cursive;
 }
@@ -49,12 +64,6 @@ ul li a i:hover {
 
 li {
 	margin: 0 0 0 15px;
-}
-.footer-container {
-	margin: 0 auto;
-	text-align: right;
-	width: 90%;
-	height: 10%;
 }
 
 .btn {
@@ -86,21 +95,9 @@ li {
   cursor: pointer;
 }
 
-@media (min-width: 280px) {
+@media screen and (width: 300px) {
   .body-container {
-    font-size: 2em;
-  }
-}
-
-@media (min-width: 280px) {
-  .header-container {
-    font-size: 2em;
-  }
-}
-
-@media (min-width: 280px) {
-  .footer-container {
-    font-size: 2em;
+    height: 60%;
   }
 }
 
