--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
  html, body {
   height: 100%;
   width: 100%;
+  margin: 0 auto;
+  padding: 5px;
  }
 
 .header-container {
@@ -10,7 +12,7 @@
 	text-align: justify;
 	height: 15%;
 	width: 85%;
-	padding: 15px;
+	padding-top: 25px;
 }
 
 .body-container {
@@ -19,9 +21,12 @@
 	height: 60%;
 	width: 85%;
 	font-family: serif;
-  font-size: 13px;
-  /*overflow: auto;*/
-  padding-bottom: 35px;
+  font-size: 14px;
+  overflow-x:hidden;
+  overflow-y:auto;
+  position: absolute;
+  left: 0;
+  right: 0;
 }
 
 .footer-container {
@@ -29,14 +34,13 @@
   text-align: right;
   width: 85%;
   height: 10%;
-  padding-bottom: 5%
-  border: dotted;
   position: absolute;
   bottom: 0;
   left: 0;
   right: 0;
-  margin-top: -35px;
+
 }
+
 .body-title {
 	font-family: 'Reenie Beanie', cursive;
 }
@@ -95,9 +99,9 @@ li {
   cursor: pointer;
 }
 
-@media screen and (width: 300px) {
+@media only screen and (max-width: 300px) {
   .body-container {
-    height: 60%;
+    font-size: 12px;
   }
 }
 
