--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@
 
 .footer-container {
   margin: 0 auto;
+  margin-bottom: 60px;
   text-align: right;
   width: 85%;
   height: 10%;
@@ -38,7 +39,6 @@
   bottom: 0;
   left: 0;
   right: 0;
-
 }
 
 .body-title {
