--- a/style.css
+++ b/style.css
@@ -10,9 +10,10 @@
 	color: #2789e5;
 	margin: 0 auto;
 	text-align: justify;
-	height: 15%;
+	height: 10%;
 	width: 85%;
 	padding-top: 25px;
+  font-size: 12px;
 }
 
 .body-container {
