--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html, body {
   width: 100%;
   margin: 0 auto;
   padding: 5px;
-  background-color: #EEE;
+  background-color: #ffffff;
  }
 
 .header-container {
