--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ html, body {
 	font-family: "Courier New", Courier, monospace;
 }
 
-.body-end {
+.body-end, .h2 {
 	font-family: 'Reenie Beanie', Courier, cursive;
 }
 
