--- a/style.css
+++ b/style.css
@@ -41,6 +41,11 @@ html, body {
     display: none;  // Safari and Chrome
 }
 
+.body-container-override {
+  overflow-y: visible;
+  overflow-x: visible;
+}
+
 .footer-container {
   margin: 0 auto;
   margin-bottom: 30px;
@@ -126,4 +131,14 @@ ol {
 .tiny-text {
   color: #70a2d1;
   font-size: 12px;
+}
+
+img, iframe {
+  width: 50%;
+}
+
+@media only screen and (max-width: 700px) {
+  img, iframe {
+    width: 300px;
+  } 
 }
