--- a/style.css
+++ b/style.css
@@ -19,8 +19,8 @@ html, body {
 }
 
 .telescope {
-  width: 35px;
-  height: 30px;
+  width: 38px;
+  height: 32px;
 
 }
 
@@ -148,4 +148,8 @@ img, iframe {
   img, iframe {
     width: 300px;
   } 
+  .telescope {
+    width: 30px;
+    height: 25px;
+  }
 }
