--- a/style.css
+++ b/style.css
@@ -18,6 +18,22 @@ html, body {
   font-size: 12px;
 }
 
+.flash {
+  animation: 1s flash infinite;
+}
+
+@keyframes flash {
+  0% {
+    text-shadow: 0px 0px 5px #cacacc;
+  }
+  50% {
+    text-shadow: none;
+  }
+  100% {
+    text-shadow: 0px 0px 5px #cacacc;
+  }
+}
+
 .telescope {
   width: 38px;
   height: 32px;
