--- a/style.css
+++ b/style.css
@@ -60,11 +60,11 @@ html, body {
 }
 
 .body-container {
-    -ms-overflow-style: none;  // IE 10+
-    overflow: -moz-scrollbars-none;  // Firefox
+    -ms-overflow-style: none;  /*  IE 10+ */ 
+    overflow: -moz-scrollbars-none;  /*  Firefox */
 }
 .body-container::-webkit-scrollbar { 
-    display: none;  // Safari and Chrome
+    display: none;  /* Safari and Chrome */
 }
 
 .body-container-override {
@@ -90,15 +90,15 @@ html, body {
 }
 
 .body-title {
-	font-family: 'Reenie Beanie', Courier, cursive;
+	font-family: 'Reenie Beanie', Arial, Helvetica, sans-serif, cursive;
 }
 
 .body-content {
-	font-family: "Courier New", Courier, monospace;
+	font-family: "Courier New", Arial, Helvetica, sans-serif, monospace;
 }
 
 .body-end, .h2 {
-	font-family: 'Reenie Beanie', Courier, cursive;
+	font-family: 'Reenie Beanie', Arial, Helvetica, sans-serif, cursive;
 }
 
 ul li {
