--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ html, body {
 	width: 85%;
 	font-family: serif;
   font-size: 16px;
-  line-height: 25px;
+  line-height: 23px;
   overflow-x:hidden;
   overflow-y:auto;
   position: absolute;
@@ -108,6 +108,7 @@ ul li {
 a {
 	color: #70a2d1;
   text-decoration:  none;
+  font-weight: bold;
 }
 
 ul li a i:hover {
