--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ html, body {
 	width: 85%;
 	padding-top: 25px;
   font-size: 12px;
+  font-family: "Source Code Pro", monospace;
 }
 
 .header-container li a {
@@ -49,9 +50,8 @@ html, body {
 	text-align: left;
 	height: 60%;
 	width: 85%;
-	font-family: serif;
-  font-size: 16px;
-  line-height: 24px;
+  font-size: 15px;
+  line-height: 32px;
   overflow-x:hidden;
   overflow-y:auto;
   position: absolute;
@@ -94,7 +94,8 @@ html, body {
 }
 
 .body-content {
-	font-family: "Courier New", Arial, Helvetica, sans-serif, monospace;
+  font-family: "Source Code Pro", monospace;
+  /* font-family: "Courier New", Arial, Helvetica, sans-serif, monospace; */
 }
 
 .body-end, .h2 {
