--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ ul li a i:hover {
 }
 
 li {
-  margin: 0 0 0 15px;
+  margin: 0 0 15px 15px;
 }
 
 ol {
@@ -164,12 +164,6 @@ ol {
 
 img, iframe {
   width: 50%;
-}
-
-@media only screen and (max-width: 300px) {
-  .body-container {
-    font-size: 12px;
-  }
 }
 
 @media only screen and (max-width: 700px) {
